# HashCat-GUI

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  PKGBUILD  README.md  SECURITY.md  hashcat-gui.desktop  hashcat-gui.service  install.sh  pyproject.toml  requirements.txt
src/: main.py
src/core/: config.json  config.py  hashcat.py  server.py
src/gui/: index.html  styles.css
src/utils/: dialogs.py
